# arithmetictrainer

./: .gitignore  MANIFEST.in  README.rst  build.sh  pyproject.toml  setup.cfg
arithmetictrainer/: __init__.py  arithmetictrainer.py  cli.py  core.py  utils.py  webgui.py
arithmetictrainer/data/: config
arithmetictrainer/data/html/: end.html  index.html  play.html  style.css
docs/source/: Modules.rst  cli.rst  conf.py  core.rst  index.rst  utils.rst
tests/: context.py  test_arithmetictrainer.py  test_core.py
