[metadata]
name = arithmetictrainer
version = 0.1rc1
author = geronymo
author_email = talasg@posteo.de
description = mental arithmetic trainer
long_description = file: README.rst
long_description_content_type = text/x-rst
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = arithmetictrainer
include_package_data = True
python_requires = >=3.10.1

[options.entry_points]
console_scripts =
    arithmetictrainer = arithmetictrainer.cli:main
